Upadate with real live links
github pages up and working

--- a/ProjectPages/projectFour.html
+++ b/ProjectPages/projectFour.html
@@ -50,7 +50,7 @@
             </div>
           </header>
           <h1>Employee Directory</h1>
-          <img class="projectPage-big-image" src="../images/Portfolio images/full pic slice.svg"></img>
+          <img class="projectPage-big-image" src="../images/Portfolioimages/full pic slice.svg"></img>
           <div class="projectPage-flexContainer">
             <div class="projectPage-description">
               <p>Employee directory for an imaginary start-up, this project implements API usage of the fake people thingy API</p>
@@ -86,12 +86,12 @@
                 });
                 </script>
               </div>
-              <a class="projectPage-link" href="liveProjects/TechdegreeProjectTen/index.html">See it live!</a>
+              <a class="projectPage-link" href="https://troyawilson.github.io/TechdegreeProjectTen/">See it live!</a>
             </div>
             <div class="projectPage-images-container">
-              <img class="projectPage-small-image" src="../images/Portfolio images/small slice.svg" alt="">
-              <img class="projectPage-small-image" src="../images/Portfolio images/modal slice.svg" alt="">
-              <img class="projectPage-small-image" src="../images/Portfolio images/close pic.svg" alt="">
+              <img class="projectPage-small-image" src="../images/Portfolioimages/small slice.svg" alt="">
+              <img class="projectPage-small-image" src="../images/Portfolioimages/modal slice.svg" alt="">
+              <img class="projectPage-small-image" src="../images/Portfolioimages/close pic.svg" alt="">
             </div>
           </div>
     </div>
