--- a/ProjectPages/projectOne.html
+++ b/ProjectPages/projectOne.html
@@ -35,7 +35,7 @@
             </div>
           </header>
           <h1>Wheel of Success!</h1>
-          <img class="projectPage-big-image" src="../images/Portfolio images/fullWheelSuccess.svg"></img>
+          <img class="projectPage-big-image" src="../images/Portfolioimages/fullWheelSuccess.svg"></img>
           <div class="projectPage-flexContainer">
             <div class="projectPage-description">
               <p>Browser version of "Wheel of Fortune", a word guessing game where players click letters onscreen to try and guess one of five random phrases</p>
@@ -70,12 +70,12 @@
                 });
                 </script>
               </div>
-              <a class="projectPage-link" href="liveProjects/TechdegreeProjectSeven/index.html">See it live!</a>
+              <a class="projectPage-link" href="https://troyawilson.github.io/TechdegreeProjectSeven/">See it live!</a>
             </div>
             <div class="projectPage-images-container">
-              <img class="projectPage-small-image" src="../images/Portfolio images/gameboardColorWS.svg" alt="">
-              <img class="projectPage-small-image" src="../images/Portfolio images/keyboardWS.svg" alt="">
-              <img class="projectPage-small-image" src="../images/Portfolio images/HeartsWS.svg" alt="">
+              <img class="projectPage-small-image" src="../images/Portfolioimages/gameboardColorWS.svg" alt="">
+              <img class="projectPage-small-image" src="../images/Portfolioimages/keyboardWS.svg" alt="">
+              <img class="projectPage-small-image" src="../images/Portfolioimages/HeartsWS.svg" alt="">
             </div>
           </div>
     </div>
