--- a/ProjectPages/projectTwo.html
+++ b/ProjectPages/projectTwo.html
@@ -32,7 +32,7 @@
             </div>
           </header>
           <h1>Dynamic Video Player!</h1>
-          <img class="projectPage-big-image" src="../images/Portfolio images/fullPicVideoPlayer.svg"></img>
+          <img class="projectPage-big-image" src="../images/Portfolioimages/fullPicVideoPlayer.svg"></img>
           <div class="projectPage-flexContainer">
             <div class="projectPage-description">
               <p>Video player with dynamic subtitles that highlight as the video plays</p>
@@ -67,7 +67,7 @@
                 });
                 </script>
               </div>
-              <a class="projectPage-link" href="liveProjects/TechdegreeProjectSix/index.html">See it live!</a>
+              <a class="projectPage-link" href="https://troyawilson.github.io/TechdegreeProjectSix/">See it live!</a>
             </div>
             <!-- <div class="projectPage-images-container">
               <img class="projectPage-small-image" src="../images/aroma-aromatic-art-434213.jpg" alt="">
