--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="main-nav" id="sticker">
       <h2 class="name">Troy <span class = "pinkText">A</span> Wilson</h2>
         <ul class="nav">
-          <li><a class ="styledLink" id="pinkText"href="#">Home</a></li>
+          <li><a class ="styledLink" id="pinkText" href="#">Home</a></li>
           <li><a class="styledLink" href="#About">About</a></li>
           <li><a class="styledLink" href="#Portfolio">Portfolio</a></li>
           <li><a class="styledLink" href="#Services">Services</a></li>
@@ -51,7 +51,7 @@
       <div class ="about-conatiner container">
         <div class ="about-goals-skills">
       <div class ="about-info">
-        <h3 class ="about-create">Let's Create Together!<h3>
+        <h3 class ="about-create">Let's Create Together!</h3>
         <h4>My Goals</h4>
         <p class ="indent">I am a front-end web developer with skills in HTML, CSS, Javascript, and jQuery, Skills I'm currently working on are Python and ReactJS. I'm passionate about learning and growing my skill set to improve myself as a developer.While development is where I feel I truly shine I also have an interest in design with skills in Photoshop and Sketch. </p>
       </div>
@@ -91,13 +91,13 @@
       <div class ="whatIdo">
         <!-- Small explanation about development and design responsively -->
         <div class ="skills-development">
-          <img src ="images\programming.svg" width ="50px">
+          <img src ="images/programming.svg" width ="50" alt="Development icon">
           <h6>Development</h6>
           <p>I create clean and efficent code for a smooth user experience as well as boosting search engine optimization(SEO).</p>
         </div>
 
         <div class ="skills-design">
-          <img src ="images\computer-graphic.svg" width ="50px">
+          <img src ="images/computer-graphic.svg" width ="50" alt="Design icon">
           <h6>Design</h6>
           <p>Nothing complements clean code quite like a clean design, I create sleek and accessible designs for all users</p>
         </div>
@@ -120,70 +120,70 @@
               Going to a new html page and having more detail on the project and linking to a live version.
           -->
         <div class ="project project1">
-          <img class="project-image" src ="images/Portfolio images/project-seven-thumb.svg">
+          <img class="project-image" src ="images/Portfolioimages/project-seven-thumb.svg" alt="Gameshow app image">
           <div class="project-information">
             <h6>Game Show App</h6>
             <!-- https://github.com/TroyAWilson/TechdegreeProjectSeven -->
             <a class="styledLink" href ="ProjectPages/projectOne.html">
               <div class="link">
                 <p>Learn more...</p>
-                <img src ="images/arrow.svg" width="25px" height="25px">
+                <img src ="images/arrow.svg" width="25" height="25" alt="arrow icon">
               </div>
             </a>
           </div>
         </div>
 
         <div class ="project project2">
-        <img class="project-image" src ="images/Portfolio images/project-six-thumb.svg">
+        <img class="project-image" src ="images/Portfolioimages/project-six-thumb.svg" alt="Dynamic video player image">
           <div class="project-information">
             <h6>Dynamic Video Player</h6>
             <!-- https://github.com/TroyAWilson/TechdegreeProjectSix -->
             <a class="styledLink" href ="ProjectPages/projectTwo.html">
               <div class="link">
                 <p>Learn more...</p>
-                <img src ="images/arrow.svg" width="25px" height="25px">
+                <img src ="images/arrow.svg" width="25" height="25" alt="arrow icon">
               </div>
             </a>
           </div>
         </div>
 
         <div class ="project project3">
-          <img class="project-image" src ="images/Portfolio images/dashboardThumb.svg">
+          <img class="project-image" src ="images/Portfolioimages/dashboardThumb.svg" alt="Web Dashboard image">
           <div class="project-information">
             <h6>Web Dashboard</h6>
             <!-- https://github.com/TroyAWilson/TechdegreeProjectSeven -->
             <a class="styledLink" href ="ProjectPages/projectThree.html">
               <div class="link">
                 <p>Learn more...</p>
-                <img src ="images/arrow.svg" width="25px" height="25px">
+                <img src ="images/arrow.svg" width="25" height="25" alt="arrow icon">
               </div>
             </a>
           </div>
         </div>
 
         <div class ="project project4">
-          <img class="project-image" src ="images/Portfolio images/project-ten-thumb.svg">
+          <img class="project-image" src ="images/Portfolioimages/project-ten-thumb.svg" alt="Employee Directory image">
           <div class="project-information">
             <h6>Employee Directory</h6>
             <!-- https://github.com/TroyAWilson/TechdegreeProjectTen -->
             <a class="styledLink" href ="ProjectPages/projectFour.html">
               <div class="link">
                 <p>Learn more...</p>
-                <img src ="images/arrow.svg" width="25px" height="25px">
+                <img src ="images/arrow.svg" width="25" height="25" alt="arrow icon">
               </div>
             </a>
           </div>
         </div>
 
         <div class ="project project5">
-          <img class="project-image" src ="images/Portfolio images/project-eleven-thumb.svg">
+          <img class="project-image" src ="images/Portfolioimages/project-eleven-thumb.svg" alt="Photo Gallery Image">
           <div class="project-information">
             <h6>ReactJS Photo Gallery</h6>
             <!-- https://github.com/TroyAWilson/techdegree-project-eleven -->
             <a class="styledLink" href ="ProjectPages/projectFive.html">
               <div class="link">
                 <p>Learn more...</p>
-                <img src ="images/arrow.svg" width="25px" height="25px">
+                <img src ="images/arrow.svg" width="25" height="25" alt="arrow icon">
               </div>
             </a>
           </div>
@@ -209,17 +209,17 @@
         </div>
 
         <div class ="services-development services-flex">
-          <img src ="images\programming.svg" width ="50px">
+          <img src ="images/programming.svg" width ="50" alt="Programming image">
           <p><span class ="pinkText">W</span>eb development</p>
         </div>
 
         <div class ="services-design services-flex">
-          <img src ="images\computer-graphic.svg" width ="50px">
+          <img src ="images/computer-graphic.svg" width ="50" alt="Design image">
           <p><span class ="pinkText">W</span>eb design</p>
         </div>
 
         <div class ="services-wordpress services-flex">
-          <img src ="images\wordpress-logo-of-a-letter-in-a-circle.svg" width ="50px">
+          <img src ="images/wordpress-logo-of-a-letter-in-a-circle.svg" width ="50" alt="Wordpress image">
           <p ><span class ="pinkText">C</span>oming Soon!</p>
         </div>
       </div>
@@ -231,7 +231,7 @@
     -->
     <div class ="breakImage">
       <!-- I'll remove this inline code and put it into the sass file when I've put sass onto this computer  -->
-      <img height ="600px" overflow="hidden" src ="images/closeupcode.jpg">
+      <img height ="600" src ="images/closeupcode.jpg" alt="Picture of code, break image">
       <div class="break-quote">
         <p>"Mathematical science shows what is. It is the language of unseen relations between things. But to use and apply that language, we must be able fully to appreciate, to feel, to seize the unseen, the unconscious."</p>
         <p>-Ada Lovelace</p>
@@ -275,10 +275,10 @@
         <h3>Coming soon!</h3>
         <!-- <span>/ starting at</span> -->
         <ul>
-          <li>Lorem ipsum dolor sit amet</li>
-          <li>Lorem ipsum dolor sit amet</li>
-          <li>Lorem ipsum dolor sit amet</li>
-          <li>Lorem ipsum dolor sit amet</li>
+          <li>Coming Soon!</li>
+          <li>Coming Soon!</li>
+          <li>Coming Soon!</li>
+          <li>Coming Soon!</li>
         </ul>
         <a href ="#Contact"><span class ="pricing-button"><span>Get a quote</span></span></a>
       </div>
@@ -295,7 +295,7 @@
       <div class ="contact-container container">
       <div class ="contact-info">
         <div class ="contact-item">
-          <img class="contact-icon contact-phone" src ="images/call.svg" width ="20px" height ="20px">
+          <img class="contact-icon contact-phone" src ="images/call.svg" width ="20" height ="20" alt="Phone icon">
           <div class ="contact-phone-number">
             <h6>Phone:</h6>
             <p> (707)-712-1542</p>
@@ -303,7 +303,7 @@
         </div>
 
         <div class ="contact-item">
-          <img class="contact-icon contact-house" src ="images\home-icon-silhouette.svg" width ="20px" height ="20px">
+          <img class="contact-icon contact-house" src ="images/home-icon-silhouette.svg" width ="20" height ="20" alt="House icon">
           <div class ="contact-Address">
             <h6>Address:</h6>
             <p>
@@ -313,7 +313,7 @@
         </div>
 
         <div class ="contact-item">
-          <img class="contact-icon contact-mail" src ="images\black-back-closed-envelope-shape.svg" width ="20px" height ="20px">
+          <img class="contact-icon contact-mail" src ="images/black-back-closed-envelope-shape.svg" width ="20" height ="20" alt="Email icon">
           <div class ="contact-email">
             <h6>Email:</h6>
             <p>Troyaustynwilson@gmail.com</p>
@@ -327,22 +327,22 @@
           <!-- action="scripts/formSend.php" -->
           <div class ="form-input">
             <label for ="name">Name:</label>
-            <input type ="text" name="name">
+            <input type ="text" id="name" name="name">
           </div>
 
           <div class ="form-input">
             <label for ="email">Email:</label>
-            <input type ="email" name="email">
+            <input type ="email" id="email" name="email">
           </div>
 
           <div class ="form-input">
             <label for ="subject">Subject:</label>
-            <input type ="text" name="subject">
+            <input type ="text" id="subject" name="subject">
           </div>
 
           <div class ="form-input">
             <label for ="message">Message:</label>
-            <textarea name ="message">
+            <textarea id ="message" name ="message">
             </textarea>
             <button type="submit" value="submit" class="contact-submit-button">Submit</button>
             <!-- Need to remove default behavior on this button -->
@@ -358,14 +358,14 @@
       Footer seciton is the wrap up containing links to my social medias, a cute logo that I designed as well as boring but important
       copyright information and credit for the icons used
     -->
-      <img class="footer-logo" src ="images/tawlogo.svg">
+      <img class="footer-logo" src ="images/tawlogo.svg" alt ="Logo">
       <!-- font for logo is Skia bold -->
       <ul class ="footer-nav">
-        <li><a class="styledLink" href="https://twitter.com/_TroyWilson" target="_blank" class="social twitter">Twitter</a></li>
-        <li><a class="styledLink" href ="https://www.linkedin.com/in/troy-wilson-019b87a7/" target="_blank" class="social linkedin">LinkedIn</a></li>
-        <li><a class="styledLink" href="https://github.com/TroyAWilson" target="_blank" class="social github">Github</a></li>
+        <li><a  href="https://twitter.com/_TroyWilson" target="_blank" class="social twitter styledLink">Twitter</a></li>
+        <li><a  href ="https://www.linkedin.com/in/troy-wilson-019b87a7/" target="_blank" class="social linkedin styledLink">LinkedIn</a></li>
+        <li><a  href="https://github.com/TroyAWilson" target="_blank" class="social github styledLink">Github</a></li>
       </ul>
-      <p class="copyright">&copy 2018, Troy <span class ="pinkText">A</span> Wilson.</p>
+      <p class="copyright">&copy; 2018, Troy <span class ="pinkText">A</span> Wilson.</p>
       <div class="icon-madeby">
         Icons made by <a class="styledLink" href="http://www.freepik.com" title="Freepik">Freepik</a> from <a class="styledLink" href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a class="styledLink" href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
     </footer>
@@ -373,9 +373,9 @@
 <!-- PHP link -->
 <!-- <?php require "scripts/formSend.php"?> -->
 <!-- Links to my JS files -->
-<script type="text/javascript" src="scripts/jquery-3.3.1.min.js"></script>
-<script type="text/javascript" src="scripts/sticky-master/jquery.sticky.js"></script>
-<script type="text/javascript" src="scripts/script.js"></script>
+<script  src="scripts/jquery-3.3.1.min.js"></script>
+<script  src="scripts/sticky-master/jquery.sticky.js"></script>
+<script  src="scripts/script.js"></script>
 </body>
 <!-- and we're done :)) -->
 
