--- a/ProjectPages/projectFive.html
+++ b/ProjectPages/projectFive.html
@@ -32,7 +32,7 @@
             </div>
           </header>
           <h1>Photo Gallery With ReactJS</h1>
-          <img class="projectPage-big-image" src="../images/Portfolio images/reactFull.svg"></img>
+          <img class="projectPage-big-image" src="../images/Portfolioimages/reactFull.svg"></img>
           <div class="projectPage-flexContainer">
             <div class="projectPage-description">
               <p>Photo gallery utilizing Flickr API built with ReactJS to create a smooth and dynamic experience with an ever evolving potential of photos</p>
@@ -67,12 +67,12 @@
                 });
                 </script>
               </div>
-              <a class="projectPage-link" href="liveProjects/build/index.html">See it live!</a>
+              <a class="projectPage-link" href="https://troyawilson.github.io/TechdegreeProjectEleven/">See it live!</a>
             </div>
             <div class="projectPage-images-container">
-              <img class="projectPage-small-image" src="../images/Portfolio images/reactDog.svg" alt="">
-              <img class="projectPage-small-image" src="../images/Portfolio images/reactSearch.svg" alt="">
-              <img class="projectPage-small-image" src="../images/Portfolio images/reactBirds.svg" alt="">
+              <img class="projectPage-small-image" src="../images/Portfolioimages/reactDog.svg" alt="">
+              <img class="projectPage-small-image" src="../images/Portfolioimages/reactSearch.svg" alt="">
+              <img class="projectPage-small-image" src="../images/Portfolioimages/reactBirds.svg" alt="">
             </div>
           </div>
     </div>
