--- a/ProjectPages/projectThree.html
+++ b/ProjectPages/projectThree.html
@@ -32,7 +32,7 @@
             </div>
           </header>
           <h1>Web Dashboard</h1>
-          <img class="projectPage-big-image" src="../images/Portfolio images/webdashFull.svg"></img>
+          <img class="projectPage-big-image" src="../images/Portfolioimages/WebdashFull.svg"></img>
           <div class="projectPage-flexContainer">
             <div class="projectPage-description">
               <p>Web dashboard showing examples of jQuery plugins with graphs and charts, use of SVG's, forms, and flexbox </p>
@@ -67,12 +67,12 @@
                 });
                 </script>
               </div>
-              <a class="projectPage-link" href="liveProjects/TechdegreeProjectNine/index.html">See it live!</a>
+              <a class="projectPage-link" href="https://troyawilson.github.io/TechdegreeProjectNine/">See it live!</a>
             </div>
             <div class="projectPage-images-container">
-              <img class="projectPage-small-image" src="../images/Portfolio images/webDashIcons.svg" alt="">
-              <img class="projectPage-small-image" src="../images/Portfolio images/webDashNewMembers.svg" alt="">
-              <img class="projectPage-small-image" src="../images/Portfolio images/webDashTwitter.svg" alt="">
+              <img class="projectPage-small-image" src="../images/Portfolioimages/webDashIcons.svg" alt="">
+              <img class="projectPage-small-image" src="../images/Portfolioimages/webDashNewMembers.svg" alt="">
+              <img class="projectPage-small-image" src="../images/Portfolioimages/webDashTwitter.svg" alt="">
             </div>
           </div>
     </div>
