Updated twitter link

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
       <img class="footer-logo" src ="images/tawlogo.svg" alt ="Logo">
       <!-- font for logo is Skia bold -->
       <ul class ="footer-nav">
-        <li><a  href="https://twitter.com/_TroyWilson" target="_blank" class="social twitter styledLink">Twitter</a></li>
+        <li><a  href="https://twitter.com/TroyDotJS" target="_blank" class="social twitter styledLink">Twitter</a></li>
         <li><a  href ="https://www.linkedin.com/in/troy-wilson-019b87a7/" target="_blank" class="social linkedin styledLink">LinkedIn</a></li>
         <li><a  href="https://github.com/TroyAWilson" target="_blank" class="social github styledLink">Github</a></li>
       </ul>
