--- a/index.html
+++ b/index.html
@@ -1,3 +1,68 @@
+<!-- <?php
+if(!isset($_POST['submit']))
+{
+	//This page should not be accessed directly. Need to submit the form.
+	echo "error; you need to submit the form!";
+}
+$name = $_POST['name'];
+$visitor_email = $_POST['email'];
+$message = $_POST['message'];
+
+//Validate first
+if(empty($name)||empty($visitor_email))
+{
+    echo "Name and email are mandatory!";
+    exit;
+}
+
+if(IsInjected($visitor_email))
+{
+    echo "Bad email value!";
+    exit;
+}
+
+$email_from = 'troyaustynwilson@gmail.com';//<== update the email address
+$email_subject = "New Form submission";
+$email_body = "You have received a new message from the user $name.\n".
+    "Here is the message:\n $message".
+
+$to = "troyaustynwilson@gmail.com";//<== update the email address
+$headers = "From: $email_from \r\n";
+$headers .= "Reply-To: $visitor_email \r\n";
+//Send the email!
+mail($to,$email_subject,$email_body,$headers);
+//done. redirect to thank-you page.
+header('Location: index.html');
+
+
+// Function to validate against any email injection attempts
+function IsInjected($str)
+{
+  $injections = array('(\n+)',
+              '(\r+)',
+              '(\t+)',
+              '(%0A+)',
+              '(%0D+)',
+              '(%08+)',
+              '(%09+)'
+              );
+  $inject = join('|', $injections);
+  $inject = "/$inject/i";
+  if(preg_match($inject,$str))
+    {
+    return true;
+  }
+  else
+    {
+    return false;
+  }
+}
+
+?> -->
+
+
+
+
 <!doctype html>
 <html lang="en">
 <!--
@@ -323,7 +388,7 @@
       <!-- Need to figure out a way to get this to send without opening the mail thing -->
       <div class ="contact-form">
         <h4>Want <br> To Hire Me?</h4>
-        <form method="post" name="contactform" action="mailto:TroyAWilson@gmail.com" >
+        <form method="POST" name="contactform" action="scripts/form-to-email.php" >
           <!-- action="scripts/formSend.php" -->
           <div class ="form-input">
             <label for ="name">Name:</label>
@@ -344,7 +409,8 @@
             <label for ="message">Message:</label>
             <textarea id ="message" name ="message">
             </textarea>
-            <button type="submit" value="submit" class="contact-submit-button">Submit</button>
+            <button type="submit" name = "submit" value="submit" class="contact-submit-button">Submit</button>
+            <!-- <input type="submit" name='submit' value="submit"> -->
             <!-- Need to remove default behavior on this button -->
           </div>
         </form>
@@ -371,6 +437,16 @@
     </footer>
 </div>
 <!-- PHP link -->
+<!-- if(isset($_POST['submit'])){
+    $to = "troyaustynwilson@gmail.com"; // this is your Email address
+    $from = $_POST['email']; // this is the sender's Email address
+    $name = $_POST['name'];
+    $subject = $_POST['subject'];
+    $message = $_POST['message'];
+
+    mail($to,$subject,$message);
+  }
+?> -->
 <!-- <?php require "scripts/formSend.php"?> -->
 <!-- Links to my JS files -->
 <script  src="scripts/jquery-3.3.1.min.js"></script>
