--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ function IsInjected($str)
 <head>
   <meta charset="utf-8">
   <title>Troy A Wilson - Front-end Web Developer</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="css/styles.css">
   <!-- Icon in the tab bar, right now it's a bit small, will change later -->
   <link rel="shortcut icon" type="image/svg" href="images/tawlogo.png">
